Changing up the site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<h1> Hello </h1>
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>House Helper</title>
+
+
+</head>
+
+<body>
+  <h1>Home Helper</h1>
+  <div>
+    <ul>
+      <li><a href="#Current Temp">current temp</a></li>
+      <li><a href="#UP">UP</a></li>
+      <li><a href="#DOWN">DOWN</a></li>
+      <li><a href="#ON">ON</a></li>
+      <li><a href="#OFF">OFF</a></li>
+      <li><a href="#nav"> back to main nav </a></li>
+    </ul>
+  </div>
+</body>
+</html>
