Checking index.html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,43 @@
 <body>
   <h1>Home Helper</h1>
   <div>
+    <h2>Temperature</h2>
     <ul>
-      <li><a href="#Current Temp">current temp</a></li>
-      <li><a href="#UP">UP</a></li>
-      <li><a href="#DOWN">DOWN</a></li>
-      <li><a href="#ON">ON</a></li>
-      <li><a href="#OFF">OFF</a></li>
-      <li><a href="#nav"> back to main nav </a></li>
+      <li>
+        <a href="#Current-Temp">Current Temperature</a>
+      </li>
+      <li>
+        <a href="#Raise-Temp">Raise Temperature</a>
+      </li>
+      <li>
+        <a href="#Lower-Temp">Lower Temperature</a>
+      </li>
     </ul>
+  </div>
+  <div>
+    <h2>House Lighting</h2
+      <div>
+      <h3>Outside Lighting</h3>
+      <ul>
+        <li>
+          <a href="#All-Lights-Off">Lights On</a>
+        </li>
+        <li>
+          <a href="#All-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
+    <div>
+    <h3>Inside Lighting</h3>
+    <ul>
+      <li>
+        <a href="#All-Lights-Off">Lights On</a>
+      </li>
+      <li>
+        <a href="#All-Lights-Off">Lights Off</a>
+      </li>
+    </ul>
+  </div>
   </div>
 </body>
 </html>
