--- a/index.html
+++ b/index.html
@@ -10,8 +10,40 @@
 </head>
 
 <body>
+  <div id="nav-bar">
+    <ul>
+      <li>
+        <a href="#Temperature">House Lights</a>
+      </li>
+      <li>
+        <a href="#House-Lights">Temperature</a>
+      </li>
+      <li>
+        <a href="#Outside-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#Inside-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#Master-Bedroom-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#Living-Room-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#Kitchen-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#Garage-Lights">House Lights</a>
+      </li>
+      <li>
+        <a href="#House-Lights">House Lights</a>
+      </li>
+    </ul>
+  </div>
+  <section id="app">
   <h1>Home Helper</h1>
-  <div>
+  <div id="Temperature">
     <h2>Temperature</h2>
     <ul>
       <li>
@@ -25,30 +57,78 @@
       </li>
     </ul>
   </div>
-  <div>
+  <div id="House-Lights">
     <h2>House Lighting</h2
-      <div>
+      <div id="Outside-Lights">
       <h3>Outside Lighting</h3>
       <ul>
         <li>
-          <a href="#All-Lights-Off">Lights On</a>
+          <a href="#All-Lights-on">Lights On</a>
         </li>
         <li>
           <a href="#All-Lights-Off">Lights Off</a>
         </li>
       </ul>
     </div>
-    <div>
+    <div id="Inside-Lights">
     <h3>Inside Lighting</h3>
-    <ul>
-      <li>
-        <a href="#All-Lights-Off">Lights On</a>
-      </li>
-      <li>
-        <a href="#All-Lights-Off">Lights Off</a>
-      </li>
-    </ul>
+    <div id="Master-Bedroom-Lights">
+      <h4>Master Bedroom</h4>
+      <ul>
+        <li>
+          <a href="#Master-Bedroom-Lights-on">Lights On</a>
+        </li>
+        <li>
+          <a href="#Master-Bedroom-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Living-Room-Lights">
+      <h4>Living Room</h4>
+      <ul>
+        <li>
+          <a href="#Living-Room-Lights-on">Lights On</a>
+        </li>
+        <li>
+          <a href="#All-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Dining-Room-Lights">
+      <h4>Dining Room</h4>
+      <ul>
+        <li>
+          <a href="#Dining-Room-Lights-on">Lights On</a>
+        </li>
+        <li>
+          <a href="#Dining-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Kitchen-Lights">
+      <h4>Kitchen</h4>
+      <ul>
+        <li>
+          <a href="#Kitchen-Lights-on">Lights On</a>
+        </li>
+        <li>
+          <a href="#Kitchen-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Garage-Lights">
+      <h4>Garage</h4>
+      <ul>
+        <li>
+          <a href="#Garage-Lights-on">Lights On</a>
+        </li>
+        <li>
+          <a href="#Garage-Lights-Off">Lights Off</a>
+        </li>
+      </ul>
+    </div>
   </div>
   </div>
+</section>
 </body>
 </html>
