--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>House Helper</title>
-
+  <link rel="stylesheet" type="text/css" href="index.css" />
 
 </head>
 
