--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
   <div id="nav-bar">
     <ul>
       <li>
-        <a href="#Temperature">House Lights</a>
+        <a href="#Temperature">Temperature</a>
       </li>
       <li>
-        <a href="#House-Lights">Temperature</a>
+        <a href="#House-Lights">House Lights</a>
       </li>
       <li>
-        <a href="#Outside-Lights">House Lights</a>
+        <a href="#Outside-Lights">Outside Lights</a>
       </li>
       <li>
-        <a href="#Inside-Lights">House Lights</a>
+        <a href="#Inside-Lights">Inside Lights</a>
       </li>
       <li>
-        <a href="#Master-Bedroom-Lights">House Lights</a>
+        <a href="#Master-Bedroom-Lights">Master Bedroom Lights</a>
       </li>
       <li>
-        <a href="#Living-Room-Lights">House Lights</a>
+        <a href="#Living-Room-Lights">Living Room Lights</a>
       </li>
       <li>
-        <a href="#Kitchen-Lights">House Lights</a>
+        <a href="#Kitchen-Lights">Kitchen Lights</a>
       </li>
       <li>
-        <a href="#Garage-Lights">House Lights</a>
+        <a href="#Garage-Lights">Garage Lights</a>
       </li>
       <li>
         <a href="#House-Lights">House Lights</a>
