--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
       <h3>Outside Lighting</h3>
       <ul>
         <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
+        <li>
           <a href="#All-Lights-on">Lights On</a>
         </li>
         <li>
@@ -76,6 +79,9 @@
       <h4>Master Bedroom</h4>
       <ul>
         <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
+        <li>
           <a href="#Master-Bedroom-Lights-on">Lights On</a>
         </li>
         <li>
@@ -86,6 +92,9 @@
     <div id="Living-Room-Lights">
       <h4>Living Room</h4>
       <ul>
+        <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
         <li>
           <a href="#Living-Room-Lights-on">Lights On</a>
         </li>
@@ -98,6 +107,9 @@
       <h4>Dining Room</h4>
       <ul>
         <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
+        <li>
           <a href="#Dining-Room-Lights-on">Lights On</a>
         </li>
         <li>
@@ -109,6 +121,9 @@
       <h4>Kitchen</h4>
       <ul>
         <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
+        <li>
           <a href="#Kitchen-Lights-on">Lights On</a>
         </li>
         <li>
@@ -119,6 +134,9 @@
     <div id="Garage-Lights">
       <h4>Garage</h4>
       <ul>
+        <li>
+          <a href="#Current-Status">Current Status</a>
+        </li>
         <li>
           <a href="#Garage-Lights-on">Lights On</a>
         </li>
