--- a/index.html
+++ b/index.html
@@ -147,6 +147,54 @@
     </div>
   </div>
   </div>
+  <div id="Entertainment">
+    <h2>Entertainment</h2>
+    <div id="Television">
+      <ul>
+        <li>
+          <a href="#Current-Channel">Current Channel</a>
+        </li>
+        <li>
+          <a href="#Up-Channel">Up Channel</a>
+        </li>
+        <li>
+          <a href="#Down-Channel">Down Channel</a>
+        </li>
+        <li>
+          <a href="#Speak-Channel">Speak Channel</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Radio">
+      <ul>
+        <li>
+          <a href="#Current-Channel">Current Channel</a>
+        </li>
+        <li>
+          <a href="#Up-Channel">Up Channel</a>
+        </li>
+        <li>
+          <a href="#Down-Channel">Down Channel</a>
+        </li>
+        <li>
+          <a href="#Speak-Channel">Speak Channel</a>
+        </li>
+      </ul>
+    </div>
+    <div id="Fireplace">
+      <ul>
+        <li>
+          <a href="#Increase-Temperature">Raise Temperature</a>
+        </li>
+        <li>
+          <a href="#Decrease-Temperature">Decrease Temperature</a>
+        </li>
+        <li>
+          <a href="#Current-Temperature">Current Temperature</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </section>
 </body>
 </html>
